kubernetes2/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
spec: 
  ingressClassName: nginx
  rules: 
    - host: nginx.local
      http:
        paths:
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
